# Modi-To-Marathi

backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: health.py
backend/app/core/: config.py  errors.py  logging.py
backend/app/dependencies/: services.py
backend/app/schemas/: health.py
backend/tests/: conftest.py  test_errors.py  test_health.py
